--- a/project10/project10/Base.lproj/Main.storyboard
+++ b/project10/project10/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I8F-uw-hMe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TcP-Zm-NkZ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
@@ -9,80 +9,83 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="hfL-UG-Hw2">
+        <scene sceneID="3JS-IL-GLm">
             <objects>
-                <collectionViewController id="sJw-QA-Txk" customClass="ViewController" customModule="project10" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aEq-jY-qVY">
+                <collectionViewController id="SKJ-xY-tPB" customClass="ViewController" customModule="project10" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="N93-v1-mf7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yGh-TV-6EG">
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uix-Ak-hBU">
                             <size key="itemSize" width="140" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Person" id="f6p-VF-XFR" customClass="PersonCell" customModule="project10" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Person" id="1Az-wY-BJA" customClass="PersonCell" customModule="project10" customModuleProvider="target">
                                 <rect key="frame" x="10" y="10" width="140" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jD1-U9-Qtk">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2Eo-Zd-SbM">
                                     <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KCM-fj-S6P">
-                                            <rect key="frame" x="10" y="10" width="120" height="120"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="arrowshape.left.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="09U-1N-a8m">
+                                            <rect key="frame" x="59.333333333333336" y="81.333333333333343" width="21.333333333333336" height="17.666666666666671"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEH-BJ-X7o">
-                                            <rect key="frame" x="10" y="134" width="120" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gm1-oq-XgS">
+                                            <rect key="frame" x="52.666666666666671" y="120.33333333333333" width="34.666666666666671" height="17.666666666666671"/>
                                             <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Gm1-oq-XgS" firstAttribute="top" secondItem="09U-1N-a8m" secondAttribute="bottom" constant="20" id="JZ5-3X-txk"/>
+                                        <constraint firstItem="09U-1N-a8m" firstAttribute="centerY" secondItem="2Eo-Zd-SbM" secondAttribute="centerY" id="RYD-Lx-bY0"/>
+                                        <constraint firstItem="Gm1-oq-XgS" firstAttribute="centerX" secondItem="09U-1N-a8m" secondAttribute="centerX" id="aUO-YJ-mj5"/>
+                                        <constraint firstItem="09U-1N-a8m" firstAttribute="centerX" secondItem="2Eo-Zd-SbM" secondAttribute="centerX" id="kVj-vy-1Dv"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="imageView" destination="KCM-fj-S6P" id="WcL-yI-QRD"/>
-                                    <outlet property="name" destination="ZEH-BJ-X7o" id="2SA-Gf-VC3"/>
-                                </connections>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
+                                <size key="customSize" width="140" height="180"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
-                            <outlet property="dataSource" destination="sJw-QA-Txk" id="PeO-Ce-wNw"/>
-                            <outlet property="delegate" destination="sJw-QA-Txk" id="DDW-c6-euF"/>
+                            <outlet property="dataSource" destination="SKJ-xY-tPB" id="FN8-E5-vF4"/>
+                            <outlet property="delegate" destination="SKJ-xY-tPB" id="BQc-vU-I4V"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="oNg-GG-PbQ"/>
+                    <navigationItem key="navigationItem" id="z50-Iq-Smg"/>
                 </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KL2-iL-SlI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NGn-FD-Wlw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1736.6412213740457" y="-1.4084507042253522"/>
+            <point key="canvasLocation" x="2179.3893129770991" y="-28.169014084507044"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="NhE-Em-ib7">
+        <scene sceneID="2jt-t3-EcH">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I8F-uw-hMe" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TcP-Zm-NkZ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eY2-dM-qGk">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oNf-x8-tvP">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="sJw-QA-Txk" kind="relationship" relationship="rootViewController" id="RNR-Bd-Vzw"/>
+                        <segue destination="SKJ-xY-tPB" kind="relationship" relationship="rootViewController" id="QVF-2y-CBL"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q3l-eY-1tc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KgT-qa-cBr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="809.92366412213732" y="-1.4084507042253522"/>
+            <point key="canvasLocation" x="1252.6717557251907" y="-28.169014084507044"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <image name="arrowshape.left.fill" catalog="system" width="128" height="104"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
