--- a/project10-12_Milestone/project10-12_Milestone/Base.lproj/Main.storyboard
+++ b/project10-12_Milestone/project10-12_Milestone/Base.lproj/Main.storyboard
@@ -2,7 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="enu-Rw-0n4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,6 +51,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GJb-rN-UtJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1909.1603053435115" y="-9.1549295774647899"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Nte-YA-6Fq">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="DDP-kT-HY9" customClass="DetailViewController" customModule="project10_12_Milestone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vRo-IW-ISz">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5HI-hv-HSR">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8Iw-Z6-OJE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5HI-hv-HSR" firstAttribute="leading" secondItem="8Iw-Z6-OJE" secondAttribute="leading" id="9Xn-Ou-kxL"/>
+                            <constraint firstItem="8Iw-Z6-OJE" firstAttribute="trailing" secondItem="5HI-hv-HSR" secondAttribute="trailing" id="BmM-3e-lZ5"/>
+                            <constraint firstItem="5HI-hv-HSR" firstAttribute="top" secondItem="8Iw-Z6-OJE" secondAttribute="top" id="e0a-eB-a1Z"/>
+                            <constraint firstItem="8Iw-Z6-OJE" firstAttribute="bottom" secondItem="5HI-hv-HSR" secondAttribute="bottom" id="onH-OQ-PyU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="5HI-hv-HSR" id="wUf-oE-dnz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NDI-Xn-HZZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2844" y="-9"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wzr-w5-yTf">
